# togetherness

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  ТЗ Интриги в ночи.docx
deploy/: Caddyfile  Dockerfile  Dockerfile-back  Dockerfile-front  Dockerfile-pgadmin  deploy.sh  docker-compose.yml  pgadmin-servers.json  togetherness-deploy.service  togetherness-deploy.timer  togetherness.service
frontend/: .env  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/public/images/: paper3.avif
frontend/src/: App.js  App.scss  index.css  index.js  varables.scss  variables.scss
frontend/src/API/: API.js
frontend/src/UI/CustomButton/: CustomButton.jsx  CustomButton.scss
frontend/src/UI/CustomInput/: CustomInput.jsx  CustomInput.scss
frontend/src/helpers/: cookies.js
frontend/src/pages/FractionPage/: FractionPage.jsx  FractionPage.scss  OneFraction.jsx
frontend/src/pages/InteractionPage/: InteractionPage.jsx  (+1 more)
frontend/src/redux/: status.js  store.js
html/: index.html
src/: config.rs  layers.rs  lib.rs  log.rs  main.rs  model.rs  router.rs  state.rs  timer.rs
src/db/: repository.rs
src/rest/: admin.rs  api.rs  handlers.rs  index.html  layers.rs  mod.rs  router.rs  shared_state.rs  state.rs  types.rs
src/rest/handlers/: admin.rs  api.rs  html.rs  index.html  mod.rs
src/static_server/: admin.html  api.html  api.rs  auth.html  html.rs  mod.rs  not_found.html  password.html  react.rs  template.rs
tests/: perfomance-test.rs  perfomance.rs
tests/common/: helper.rs  mod.rs  scenario.rs
(+14 files in other folders)
