[package]
name = "togetherness"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = "0.3"
axum = "0.7"
tower-http = {version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
minijinja = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
